@@ -488,8 +488,9 @@ HB_FUNC( IGCALCTEXTSIZE )
 {
    PHB_ITEM pOutItem = hb_param( 1, HB_IT_ANY );
    ImVec2 pOut;
+   HB_SIZE text_siz = hb_parclen( 2 );
    const char* text = hb_parcx( 2 );
-   const char* text_end = NULL;
+   const char* text_end = text + text_siz;
    bool hide_text_after_double_hash = hb_parldef( 3, 0 );
    float wrap_width = ( float ) ( ! HB_ISNUM( 4 ) ? -1.0 : hb_parnd( 4 ) );
    igCalcTextSize(&pOut,text,text_end,hide_text_after_double_hash,wrap_width);
@@ -586,9 +587,11 @@ HB_FUNC( IGCHECKBOXFLAGSUINTPTR )
 HB_FUNC( IGCHECKBOXFLAGSS64PTR )
 {
    const char* label = hb_parcx( 1 );
-   ImS64* flags = ( ImS64* ) hb_parptr( 2 );
-   ImS64 flags_value;
+   ImS64 /* @ */ _flags = ( HB_MAXINT ) hb_parnint( 2 );
+   ImS64 * flags = &_flags;
+   ImS64 flags_value = ( HB_MAXINT ) hb_parnint( 3 );
    bool ret = igCheckboxFlagsS64Ptr(label,flags,flags_value);
+   hb_itemPutNInt( hb_paramError( 2 ), _flags );
    hb_retl( ret );
 }
 
@@ -1494,8 +1497,9 @@ HB_FUNC( IGFINDORCREATEWINDOWSETTINGS )
 /* const char* igFindRenderedTextEnd(const char* text,const char* text_end) */
 HB_FUNC( IGFINDRENDEREDTEXTEND )
 {
+   HB_SIZE text_siz = hb_parclen( 1 );
    const char* text = hb_parcx( 1 );
-   const char* text_end = NULL;
+   const char* text_end = text + text_siz;
    const char* ret = igFindRenderedTextEnd(text,text_end);
    hb_retc( ret );
 }
@@ -1902,8 +1906,9 @@ HB_FUNC( IGGETIDSTR )
 /* ImGuiID igGetIDStrStr(const char* str_id_begin,const char* str_id_end) */
 HB_FUNC( IGGETIDSTRSTR )
 {
+   HB_SIZE str_id_begin_siz = hb_parclen( 1 );
    const char* str_id_begin = hb_parcx( 1 );
-   const char* str_id_end = hb_parcx( 2 );
+   const char* str_id_end = str_id_begin + str_id_begin_siz;
    ImGuiID ret = igGetIDStrStr(str_id_begin,str_id_end);
    hb_retni( ( int ) ret );
 }
@@ -1919,9 +1924,10 @@ HB_FUNC( IGGETIDPTR )
 /* ImGuiID igGetIDWithSeed(const char* str_id_begin,const char* str_id_end,ImGuiID seed) */
 HB_FUNC( IGGETIDWITHSEED )
 {
+   HB_SIZE str_id_begin_siz = hb_parclen( 1 );
    const char* str_id_begin = hb_parcx( 1 );
-   const char* str_id_end = hb_parcx( 2 );
-   ImGuiID seed = ( ImGuiID ) hb_parni( 3 );
+   const char* str_id_end = str_id_begin + str_id_begin_siz;
+   ImGuiID seed = ( ImGuiID ) hb_parni( 2 );
    ImGuiID ret = igGetIDWithSeed(str_id_begin,str_id_end,seed);
    hb_retni( ( int ) ret );
 }
@@ -2959,8 +2965,9 @@ HB_FUNC( IGIMSTRBOLW )
 /* const char* igImStrchrRange(const char* str_begin,const char* str_end,char c) */
 HB_FUNC( IGIMSTRCHRRANGE )
 {
+   HB_SIZE str_begin_siz = hb_parclen( 1 );
    const char* str_begin = hb_parcx( 1 );
-   const char* str_end = hb_parcx( 2 );
+   const char* str_end = str_begin + str_begin_siz;
    char c;
    const char* ret = igImStrchrRange(str_begin,str_end,c);
    hb_retc( ret );
@@ -2991,8 +2998,9 @@ HB_FUNC( IGIMSTRDUPCPY )
 /* const char* igImStreolRange(const char* str,const char* str_end) */
 HB_FUNC( IGIMSTREOLRANGE )
 {
+   HB_SIZE str_siz = hb_parclen( 1 );
    const char* str = hb_parcx( 1 );
-   const char* str_end = hb_parcx( 2 );
+   const char* str_end = str + str_siz;
    const char* ret = igImStreolRange(str,str_end);
    hb_retc( ret );
 }
@@ -3009,10 +3017,12 @@ HB_FUNC( IGIMSTRICMP )
 /* const char* igImStristr(const char* haystack,const char* haystack_end,const char* needle,const char* needle_end) */
 HB_FUNC( IGIMSTRISTR )
 {
+   HB_SIZE haystack_siz = hb_parclen( 1 );
    const char* haystack = hb_parcx( 1 );
-   const char* haystack_end = hb_parcx( 2 );
-   const char* needle = hb_parcx( 3 );
-   const char* needle_end = hb_parcx( 4 );
+   const char* haystack_end = haystack + haystack_siz;
+   HB_SIZE needle_siz = hb_parclen( 2 );
+   const char* needle = hb_parcx( 2 );
+   const char* needle_end = needle + needle_siz;
    const char* ret = igImStristr(haystack,haystack_end,needle,needle_end);
    hb_retc( ret );
 }
@@ -3051,8 +3061,9 @@ HB_FUNC( IGIMTEXTCHARFROMUTF8 )
 {
    unsigned int _out_char;
    unsigned int* out_char = &_out_char;
+   HB_SIZE in_text_siz = hb_parclen( 2 );
    const char* in_text = hb_parcx( 2 );
-   const char* in_text_end = hb_parcx( 3 );
+   const char* in_text_end = in_text + in_text_siz;
    int ret = igImTextCharFromUtf8(out_char,in_text,in_text_end);
    hb_retni( ret );
 }
@@ -3060,8 +3071,9 @@ HB_FUNC( IGIMTEXTCHARFROMUTF8 )
 /* int igImTextCountCharsFromUtf8(const char* in_text,const char* in_text_end) */
 HB_FUNC( IGIMTEXTCOUNTCHARSFROMUTF8 )
 {
+   HB_SIZE in_text_siz = hb_parclen( 1 );
    const char* in_text = hb_parcx( 1 );
-   const char* in_text_end = hb_parcx( 2 );
+   const char* in_text_end = in_text + in_text_siz;
    int ret = igImTextCountCharsFromUtf8(in_text,in_text_end);
    hb_retni( ret );
 }
@@ -3069,8 +3081,9 @@ HB_FUNC( IGIMTEXTCOUNTCHARSFROMUTF8 )
 /* int igImTextCountUtf8BytesFromChar(const char* in_text,const char* in_text_end) */
 HB_FUNC( IGIMTEXTCOUNTUTF8BYTESFROMCHAR )
 {
+   HB_SIZE in_text_siz = hb_parclen( 1 );
    const char* in_text = hb_parcx( 1 );
-   const char* in_text_end = hb_parcx( 2 );
+   const char* in_text_end = in_text + in_text_siz;
    int ret = igImTextCountUtf8BytesFromChar(in_text,in_text_end);
    hb_retni( ret );
 }
@@ -3078,8 +3091,9 @@ HB_FUNC( IGIMTEXTCOUNTUTF8BYTESFROMCHAR )
 /* int igImTextCountUtf8BytesFromStr(const ImWchar* in_text,const ImWchar* in_text_end) */
 HB_FUNC( IGIMTEXTCOUNTUTF8BYTESFROMSTR )
 {
+   HB_SIZE in_text_siz = hb_parclen( 1 );
    const ImWchar* in_text = ( const ImWchar* ) hb_parptr( 1 );
-   const ImWchar* in_text_end = ( const ImWchar* ) hb_parptr( 2 );
+   const ImWchar* in_text_end = in_text + in_text_siz;
    int ret = igImTextCountUtf8BytesFromStr(in_text,in_text_end);
    hb_retni( ret );
 }
@@ -3089,9 +3103,10 @@ HB_FUNC( IGIMTEXTSTRFROMUTF8 )
 {
    ImWchar* buf = ( ImWchar* ) hb_parptr( 1 );
    int buf_size = hb_parni( 2 );
+   HB_SIZE in_text_siz = hb_parclen( 3 );
    const char* in_text = hb_parcx( 3 );
-   const char* in_text_end = hb_parcx( 4 );
-   const char** in_remaining = ( const char** ) hb_parptr( 5 );
+   const char* in_text_end = in_text + in_text_siz;
+   const char** in_remaining = ( const char** ) hb_parptr( 4 );
    int ret = igImTextStrFromUtf8(buf,buf_size,in_text,in_text_end,in_remaining);
    hb_retni( ret );
 }
@@ -3101,8 +3116,9 @@ HB_FUNC( IGIMTEXTSTRTOUTF8 )
 {
    char* buf = hb_itemGetC( hb_paramError( 1 ) );
    int buf_size = hb_parni( 2 );
+   HB_SIZE in_text_siz = hb_parclen( 3 );
    const ImWchar* in_text = ( const ImWchar* ) hb_parptr( 3 );
-   const ImWchar* in_text_end = ( const ImWchar* ) hb_parptr( 4 );
+   const ImWchar* in_text_end = in_text + in_text_siz;
    int ret = igImTextStrToUtf8(buf,buf_size,in_text,in_text_end);
    hb_itemPutC( hb_paramError( 1 ), buf );
    hb_xfree( buf );
@@ -4187,8 +4203,9 @@ HB_FUNC( IGLOGFINISH )
 HB_FUNC( IGLOGRENDEREDTEXT )
 {
    const ImVec2* ref_pos = ( const ImVec2* ) hb_parptr( 1 );
+   HB_SIZE text_siz = hb_parclen( 2 );
    const char* text = hb_parcx( 2 );
-   const char* text_end = NULL;
+   const char* text_end = text + text_siz;
    igLogRenderedText(ref_pos,text,text_end);
 }
 
@@ -4594,8 +4611,9 @@ HB_FUNC( IGPUSHIDSTR )
 /* void igPushIDStrStr(const char* str_id_begin,const char* str_id_end) */
 HB_FUNC( IGPUSHIDSTRSTR )
 {
+   HB_SIZE str_id_begin_siz = hb_parclen( 1 );
    const char* str_id_begin = hb_parcx( 1 );
-   const char* str_id_end = hb_parcx( 2 );
+   const char* str_id_end = str_id_begin + str_id_begin_siz;
    igPushIDStrStr(str_id_begin,str_id_end);
 }
 
@@ -4853,8 +4871,9 @@ HB_FUNC( IGRENDERTEXT )
 {
    PHB_ITEM ppos = hb_param( 1, HB_IT_ARRAY );
    ImVec2 pos = ImVec2{ _paf( ppos, 1 ), _paf( ppos, 2 ) };
+   HB_SIZE text_siz = hb_parclen( 2 );
    const char* text = hb_parcx( 2 );
-   const char* text_end = NULL;
+   const char* text_end = text + text_siz;
    bool hide_text_after_hash = hb_parldef( 3, 1 );
    igRenderText(pos,text,text_end,hide_text_after_hash);
 }
@@ -4866,8 +4885,9 @@ HB_FUNC( IGRENDERTEXTCLIPPED )
    const ImVec2 pos_min = ImVec2{ _paf( ppos_min, 1 ), _paf( ppos_min, 2 ) };
    PHB_ITEM ppos_max = hb_param( 2, HB_IT_ARRAY );
    const ImVec2 pos_max = ImVec2{ _paf( ppos_max, 1 ), _paf( ppos_max, 2 ) };
+   HB_SIZE text_siz = hb_parclen( 3 );
    const char* text = hb_parcx( 3 );
-   const char* text_end = NULL;
+   const char* text_end = text + text_siz;
    const ImVec2* text_size_if_known = ( const ImVec2* ) hb_parptr( 4 );
    PHB_ITEM palign = hb_param( 5, HB_IT_ARRAY );
    const ImVec2 align = ImVec2{ _paf( palign, 1 ), _paf( palign, 2 ) };
@@ -4883,8 +4903,9 @@ HB_FUNC( IGRENDERTEXTCLIPPEDEX )
    const ImVec2 pos_min = ImVec2{ _paf( ppos_min, 1 ), _paf( ppos_min, 2 ) };
    PHB_ITEM ppos_max = hb_param( 3, HB_IT_ARRAY );
    const ImVec2 pos_max = ImVec2{ _paf( ppos_max, 1 ), _paf( ppos_max, 2 ) };
+   HB_SIZE text_siz = hb_parclen( 4 );
    const char* text = hb_parcx( 4 );
-   const char* text_end = NULL;
+   const char* text_end = text + text_siz;
    const ImVec2* text_size_if_known = ( const ImVec2* ) hb_parptr( 5 );
    PHB_ITEM palign = hb_param( 6, HB_IT_ARRAY );
    const ImVec2 align = ImVec2{ _paf( palign, 1 ), _paf( palign, 2 ) };
@@ -4902,8 +4923,9 @@ HB_FUNC( IGRENDERTEXTELLIPSIS )
    const ImVec2 pos_max = ImVec2{ _paf( ppos_max, 1 ), _paf( ppos_max, 2 ) };
    float clip_max_x = ( float ) hb_parnd( 4 );
    float ellipsis_max_x = ( float ) hb_parnd( 5 );
+   HB_SIZE text_siz = hb_parclen( 6 );
    const char* text = hb_parcx( 6 );
-   const char* text_end = NULL;
+   const char* text_end = text + text_siz;
    const ImVec2* text_size_if_known = ( const ImVec2* ) hb_parptr( 7 );
    igRenderTextEllipsis(draw_list,pos_min,pos_max,clip_max_x,ellipsis_max_x,text,text_end,text_size_if_known);
 }
@@ -4913,8 +4935,9 @@ HB_FUNC( IGRENDERTEXTWRAPPED )
 {
    PHB_ITEM ppos = hb_param( 1, HB_IT_ARRAY );
    ImVec2 pos = ImVec2{ _paf( ppos, 1 ), _paf( ppos, 2 ) };
+   HB_SIZE text_siz = hb_parclen( 2 );
    const char* text = hb_parcx( 2 );
-   const char* text_end = NULL;
+   const char* text_end = text + text_siz;
    float wrap_width = ( float ) hb_parnd( 3 );
    igRenderTextWrapped(pos,text,text_end,wrap_width);
 }
@@ -6511,8 +6534,9 @@ HB_FUNC( IGTEXTDISABLEDV )
 /* void igTextEx(const char* text,const char* text_end,ImGuiTextFlags flags) */
 HB_FUNC( IGTEXTEX )
 {
+   HB_SIZE text_siz = hb_parclen( 1 );
    const char* text = hb_parcx( 1 );
-   const char* text_end = NULL;
+   const char* text_end = text + text_siz;
    ImGuiTextFlags flags = ( ImGuiTextFlags ) hb_parni( 2 );
    igTextEx(text,text_end,flags);
 }
@@ -6520,8 +6544,9 @@ HB_FUNC( IGTEXTEX )
 /* void igTextUnformatted(const char* text,const char* text_end) */
 HB_FUNC( IGTEXTUNFORMATTED )
 {
+   HB_SIZE text_siz = hb_parclen( 1 );
    const char* text = hb_parcx( 1 );
-   const char* text_end = NULL;
+   const char* text_end = text + text_siz;
    igTextUnformatted(text,text_end);
 }
 
@@ -6577,8 +6602,9 @@ HB_FUNC( IGTREENODEBEHAVIOR )
 {
    ImGuiID id = ( ImGuiID ) hb_parni( 1 );
    ImGuiTreeNodeFlags flags = ( ImGuiTreeNodeFlags ) hb_parni( 2 );
+   HB_SIZE label_siz = hb_parclen( 3 );
    const char* label = hb_parcx( 3 );
-   const char* label_end = hb_parcx( 4 );
+   const char* label_end = label + label_siz;
    bool ret = igTreeNodeBehavior(id,flags,label,label_end);
    hb_retl( ret );
 }
